Implement visibility check for EntryHandler
add filter_entries that check visibility of entries: admin can read any entries, others can read public and released(now > datetime) entries

--- a/index.yaml
+++ b/index.yaml
@@ -19,6 +19,11 @@ indexes:
   properties:
   - name: public
   - name: datetime
+
+- kind: Entry
+  properties:
+  - name: public
+  - name: datetime
     direction: desc
 
 - kind: Entry
